--- a/packages/Dropdown/src/dropdown.scss
+++ b/packages/Dropdown/src/dropdown.scss
@@ -11,6 +11,7 @@
     --ids-dropdown-font-size: #{tokens.$font-size-4};
     --ids-dropdown-color: #{tokens.$grey-800};
     --ids-dropdown-background: #{tokens.$samoyed};
+    --ids-dropdown-border: none;
     --ids-dropdown-border-radius: #{tokens.$border-radius-sm};
     --ids-dropdown-zindex: #{tokens.$z-index-100};
     --ids-dropdown-box-shadow: #{tokens.$shadow-12};
@@ -36,6 +37,7 @@
     --ids-dropdown-font-size: var(--hop-body-sm-font-size);
     --ids-dropdown-color: var(--hop-neutral-text);
     --ids-dropdown-background: var(--hop-neutral-surface);
+    --ids-dropdown-border: 0.0625rem solid var(--hop-neutral-border-weak);
     --ids-dropdown-border-radius: var(--hop-shape-rounded-md);
     --ids-dropdown-box-shadow: var(--hop-elevation-lifted);
     --ids-dropdown-padding: 0;
@@ -57,6 +59,7 @@
     font-size: var(--ids-dropdown-font-size);
     color: var(--ids-dropdown-color);
     background-color: var(--ids-dropdown-background);
+    border: var(--ids-dropdown-border);
     border-radius: var(--ids-dropdown-border-radius);
     box-shadow: var(--ids-dropdown-box-shadow);
     z-index: var(--ids-dropdown-zindex);
